editors/zed/grammars/sema/test/corpus/collections.txt
================================================================================
Empty list
================================================================================

()

--------------------------------------------------------------------------------

(source_file (list))

================================================================================
Simple list
================================================================================

(1 2 3)

--------------------------------------------------------------------------------

(source_file (list (number) (number) (number)))

================================================================================
Nested list
================================================================================

((1 2) (3 4))

--------------------------------------------------------------------------------

(source_file (list (list (number) (number)) (list (number) (number))))

================================================================================
Empty vector
================================================================================

[]

--------------------------------------------------------------------------------

(source_file (vector))

================================================================================
Vector
================================================================================

[1 2 3]

--------------------------------------------------------------------------------

(source_file (vector (number) (number) (number)))

================================================================================
Empty hash map
================================================================================

{}

--------------------------------------------------------------------------------

(source_file (hash_map))

================================================================================
Hash map
================================================================================

{:a 1 :b 2}

--------------------------------------------------------------------------------

(source_file (hash_map (keyword) (number) (keyword) (number)))

================================================================================
Byte vector
================================================================================

#u8(1 2 3)

--------------------------------------------------------------------------------

(source_file (byte_vector (number) (number) (number)))

================================================================================
Dotted pair
================================================================================

(a . b)

--------------------------------------------------------------------------------

(source_file (list (symbol) (symbol)))
