editors/zed/grammars/sema/test/corpus/comments.txt
================================================================================
Line comment before code
================================================================================

; this is a comment
42

--------------------------------------------------------------------------------

(source_file (comment) (number))

================================================================================
Line comment after code
================================================================================

42 ; comment

--------------------------------------------------------------------------------

(source_file (number) (comment))

================================================================================
Multiple line comments
================================================================================

; first comment
; second comment
42

--------------------------------------------------------------------------------

(source_file (comment) (comment) (number))

================================================================================
Block comment before code
================================================================================

#| block comment |# 42

--------------------------------------------------------------------------------

(source_file (block_comment) (number))

================================================================================
Block comment between expressions
================================================================================

1 #| comment |# 2

--------------------------------------------------------------------------------

(source_file (number) (block_comment) (number))

================================================================================
Comment inside list
================================================================================

(a ; comment
 b)

--------------------------------------------------------------------------------

(source_file (list (symbol) (comment) (symbol)))
