editors/zed/grammars/sema/test/corpus/forms.txt
================================================================================
Symbol
================================================================================

foo

--------------------------------------------------------------------------------

(source_file (symbol))

================================================================================
Namespaced symbol
================================================================================

string/trim

--------------------------------------------------------------------------------

(source_file (symbol))

================================================================================
Predicate symbol
================================================================================

null?

--------------------------------------------------------------------------------

(source_file (symbol))

================================================================================
Define variable
================================================================================

(define x 42)

--------------------------------------------------------------------------------

(source_file (list (symbol) (symbol) (number)))

================================================================================
Define function
================================================================================

(define (add a b) (+ a b))

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (list (symbol) (symbol) (symbol))
    (list (symbol) (symbol) (symbol))))

================================================================================
Lambda
================================================================================

(lambda (x) (* x x))

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (list (symbol))
    (list (symbol) (symbol) (symbol))))

================================================================================
If expression
================================================================================

(if #t 1 2)

--------------------------------------------------------------------------------

(source_file (list (symbol) (boolean) (number) (number)))

================================================================================
Let expression
================================================================================

(let ((x 1)) x)

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (list (list (symbol) (number)))
    (symbol)))

================================================================================
Defagent
================================================================================

(defagent helper "system prompt" :model "gpt-4")

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (symbol)
    (string)
    (keyword)
    (string)))
