editors/zed/grammars/sema/test/corpus/quoting.txt
================================================================================
Quote symbol
================================================================================

'foo

--------------------------------------------------------------------------------

(source_file (quote (symbol)))

================================================================================
Quote list
================================================================================

'(1 2 3)

--------------------------------------------------------------------------------

(source_file (quote (list (number) (number) (number))))

================================================================================
Quasiquote with unquote
================================================================================

`(a ,b)

--------------------------------------------------------------------------------

(source_file (quasiquote (list (symbol) (unquote (symbol)))))

================================================================================
Quasiquote with unquote splicing
================================================================================

`(a ,@b)

--------------------------------------------------------------------------------

(source_file (quasiquote (list (symbol) (unquote_splicing (symbol)))))

================================================================================
Nested quote
================================================================================

'(a '(b c))

--------------------------------------------------------------------------------

(source_file (quote (list (symbol) (quote (list (symbol) (symbol))))))

================================================================================
Quote number
================================================================================

'42

--------------------------------------------------------------------------------

(source_file (quote (number)))
